src/objects/rule__c.object
<CustomObject>
    <fields>
        <fullName>Email_Flow__c</fullName>
        <label>Email Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOS Report Notification</fullName>
                </value>
                <value>
                    <fullName>SOS RA Report Notification</fullName>
                </value>
                <value>
                    <fullName>SOS Business Report Notification</fullName>
                </value>
                <value>
                    <fullName>SOS Terminated Report Notification</fullName>
                </value>
                <value>
                    <fullName>Send Email on RAR Approval</fullName>
                </value>
                <value>
                    <fullName>SOS RA Approval Notification</fullName>
                </value>
                <value>
                    <fullName>SOS Business Owner Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Workflow_Datetime__c</fullName>
        <label>Email Workflow Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Identification_Number_DOL__c</fullName>
        <description>Vermont Employer ID referenced from VDOL data import March 2020</description>
        <label>Vermont Employer Identification Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Identification_Number__c</fullName>
        <description>Employer ID referenced from VDOL data import March 2020</description>
        <label>Employer Identification Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>S Corporation</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Business Unit</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Process__c</fullName>
        <label>Event Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Testing Site</fullName>
                </value>
                <value>
                    <fullName>Vaccination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State-Sponsored</fullName>
                    <default>true</default>
                    <label>State-Sponsored</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>IF(  NOT(ISNULL(Business_Terminated_Date__c) ) , 
        IF(ISPICKVAL(Entity_Type__c,&apos;Limited Liability Partnership&apos;) || 
               ISPICKVAL(Entity_Type__c,&apos;Mutual Benefit Enterprise&apos;),
               ADDMONTHS(Business_Terminated_Date__c,24),
               ADDMONTHS(Business_Terminated_Date__c,60)),
               Business_Terminated_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End_Month__c</fullName>
        <label>Fiscal Year End (Month)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Annual_Biennial_Report_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Annual/Biennial Report Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Registered_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Registered Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reporting_Period_Open__c</fullName>
        <formula>IF(Next_Reporting_Start_Date__c&lt;=Next_Reporting_End_Date__c,
    IF(
        (TODAY() &gt;= Next_Reporting_Start_Date__c &amp;&amp; TODAY()&lt;= Next_Reporting_End_Date__c &amp;&amp;
        ISPICKVAL(Business_Status__c,&apos;Active&apos;) &amp;&amp; Is_Annual_Biennial_Report_Filed__c = False),
        True,
            IF( 
                (
                    (ISPICKVAL(Business_Status__c,&apos;Terminated&apos;) ||
                        ISPICKVAL(Business_Status__c,&apos;Inactive - Terminated&apos;) ||
                        (ISPICKVAL(Business_Status__c,&apos;Inactive - Dissolved&apos;) &amp;&amp; 
                           TODAY()&lt; Dissolved_Date__c +120) 
                    ) &amp;&amp;
                    YEAR(Next_Reporting_End_Date__c) &lt;= YEAR(TODAY()) &amp;&amp;
                    (
                        MONTH(TODAY()) &gt; MONTH(Next_Reporting_Start_Date__c) ||
                        ( 
                            MONTH(TODAY()) = MONTH(Next_Reporting_Start_Date__c) &amp;&amp;
                            DAY(TODAY()) &gt;= DAY(Next_Reporting_Start_Date__c)
                        )
                    ) &amp;&amp;
                    (
                        MONTH(TODAY()) &lt; MONTH(Next_Reporting_End_Date__c) ||
                        ( 
                            MONTH(TODAY()) = MONTH(Next_Reporting_End_Date__c) &amp;&amp;
                            DAY(TODAY()) &lt;= DAY(Next_Reporting_End_Date__c)
                        )
                    )
                ),True,False
            )
    ), False
)</formula>
        <label>Is Reporting Period Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOCATION__c</fullName>
        <label>LOCATION</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Annual_Report_Date__c</fullName>
        <label>Last Annual Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Vendor_Comments__c</fullName>
        <label>Legacy Vendor Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lock_Scope_and_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Scope and Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Qualified__c</fullName>
        <label>MBE Qualified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Sub_Code__c</fullName>
        <label>NAICS Sub Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naics_Code_2__c</fullName>
        <label>Naics Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naics_SubCode_2__c</fullName>
        <label>Naics SubCode 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Reporting_End_Date__c</fullName>
        <label>Next Reporting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Reporting_Start_Date__c</fullName>
        <label>Next Reporting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Profit__c</fullName>
        <label>Non-Profit?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_BA_Report_Notifications_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of BA Report Notifications Sent</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Report_Notifications_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Report Notifications Sent</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks_Available__c</fullName>
        <label>Number of Weeks Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                    <isActive>false</isActive>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <isActive>false</isActive>
                    <label>14</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ordering_Provider_or_Ordering_Facility__c</fullName>
        <label>Ordering Provider or Ordering Facility</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Portfolio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_Non_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profit/Non Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDC_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDC Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RDC Business Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Statewide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Type__c</fullName>
        <description>1 Means Annual Report 
2 Means Biannual Report</description>
        <label>Reporting Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrears Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOS_Business_Report_URL__c</fullName>
        <formula>$Label.SOS_Base_Url+&apos;report/00Or0000000FEm0EAG/register-agents-report-due?reportFilters=%5B%7B%22column%22%3A%22Business_Information__c.RA_Account_Id__c%22%2C%22operator%22%3A%22equals%22%2C%22value%22%3A%22&apos;+Id+&apos;%22%7D%5D&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOS Business Report URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOS_Next_Report_Notification_Date__c</fullName>
        <label>SOS Next Report Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOS_Report_Notification_Date__c</fullName>
        <label>SOS Report Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_SU_SD_ID__c</fullName>
        <label>School/SU/SD ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bridge Repair/Installation</fullName>
                </value>
                <value>
                    <fullName>Large Culvert Repair/Installation</fullName>
                </value>
                <value>
                    <fullName>Paving</fullName>
                </value>
                <value>
                    <fullName>Roadway Repair, Slopes &amp; Small Culverts</fullName>
                </value>
                <value>
                    <fullName>Right of Way Clearing</fullName>
                </value>
                <value>
                    <fullName>Culvert, Slope Slides/Landslides and/or Washout/Ditching</fullName>
                    <label>Culvert, Slope Slides/Landslides and/or Washout/Ditching (RAB)</label>
                </value>
                <value>
                    <fullName>Crossing &amp; Paving</fullName>
                </value>
                <value>
                    <fullName>Right-of-Way Clearing (RAB)</fullName>
                </value>
                <value>
                    <fullName>Fencing</fullName>
                </value>
                <value>
                    <fullName>Track Work</fullName>
                    <label>Track Work (RAB)</label>
                </value>
                <value>
                    <fullName>Bridge (Rail)</fullName>
                    <label>Bridge (RAB)</label>
                </value>
                <value>
                    <fullName>Roadway Ancillary</fullName>
                </value>
                <value>
                    <fullName>Aviation Pavement Maintenance (RAB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Id__c</fullName>
        <description>Supplier Id referenced in VISION</description>
        <label>Supplier Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <description>Supplier Name referenced in VISION</description>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Entity_Type__c</fullName>
        <label>Tax Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual/Sole Proprietor or Single Member LLC</fullName>
                </value>
                <value>
                    <fullName>C Corporation</fullName>
                </value>
                <value>
                    <fullName>S Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust/Estate</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered Agent Resignation</fullName>
                </value>
                <value>
                    <fullName>Annual/Biennial Report Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Ranking__c</fullName>
        <label>Tier Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5 (Leads)</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <label>Type Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Water</fullName>
                </value>
                <value>
                    <fullName>Community Municipal</fullName>
                    <label>Community Municipal Water</label>
                </value>
                <value>
                    <fullName>Community Municipal-Combined</fullName>
                </value>
                <value>
                    <fullName>Community Wastewater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <label>Type of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Lobby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unverified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Account that has been created from an external user and has not been verified</description>
        <label>Unverified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VT_Headquartered__c</fullName>
        <label>VT Headquartered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VendorID__c</fullName>
        <label>VendorID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorNickname__c</fullName>
        <label>VendorNickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Number__c</fullName>
        <label>Vendor Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <label>Vendor Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID_Number__c</fullName>
        <label>Vendor ID Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <description>Vendor Id</description>
        <label>Vendor Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status_DFR_CO_GM__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                    <default>true</default>
                    <label>Unverified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vermont_County__c</fullName>
        <label>Vermont County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addison</fullName>
                    <default>true</default>
                    <label>Addison</label>
                </value>
                <value>
                    <fullName>Bennington</fullName>
                </value>
                <value>
                    <fullName>Caledonia</fullName>
                </value>
                <value>
                    <fullName>Chittenden</fullName>
                </value>
                <value>
                    <fullName>Essex</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Grand Isle</fullName>
                </value>
                <value>
                    <fullName>Lamoille</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Orleans</fullName>
                </value>
                <value>
                    <fullName>Rutland</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>Windham</fullName>
                </value>
                <value>
                    <fullName>Windsor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withholding_cd__c</fullName>
        <label>Withholding_cd</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfdo_grants__Tax_ID__c</fullName>
        <description>The unique set of numbers assigned by the government to identify an organization for tax purposes.</description>
        <inlineHelpText>The unique set of numbers assigned by the government to identify an organization for tax purposes.</inlineHelpText>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ACCD_DEC_Comm_Business_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>RDC__c</columns>
        <columns>RDC_Member__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <filters>
            <field>RDC__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ACCD Business Account</label>
        <sharedTo>
            <group>ACCD_DED_Users</group>
            <group>ACCD_RDC_Portal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACCD_DED_Accounts</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>RDC__c</columns>
        <columns>Account_Type__c</columns>
        <columns>DED_Industry__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>Tier_Ranking__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RDC__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <label>ACCD DED Accounts</label>
        <sharedTo>
            <group>ACCD_RDC_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACCD_RDC_Accts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>RDC</value>
        </filters>
        <label>ACCD RDC Accts</label>
        <sharedTo>
            <group>ACCD_DED_Users</group>
            <group>ACCD_RDC_Portal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AOE_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_SU_SD_ID__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>AOE Accounts</label>
        <sharedTo>
            <group>AOE_All_Agency</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AOT_IDIQ_Contractor_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Region__c</columns>
        <columns>Scope__c</columns>
        <columns>Employer_Identification_Number__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>Northeast,Northwest,Southeast,Southwest,Statewide</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>3rd Party Contractor</value>
        </filters>
        <label>AOT IDIQ Contractor Accounts</label>
        <sharedTo>
            <group>AOT_Contract_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_for_30_days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>RDC__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <filters>
            <field>RDC__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>New Businesses This Month</label>
        <sharedTo>
            <group>ACCD_DED_Users</group>
            <group>ACCD_Managers</group>
            <group>ACCD_RDC_Portal_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>